# rust-liveproject-stock-tracking-cli

./: .gitignore  .http  Cargo.toml
docs/: design-solution.md  diagrams.md  xactor.subscriber.example.rs
src/: actors.rs  main.rs  messages.rs  signals.rs  test.rs
src/actors/: data_holder.rs  fetcher.rs  http_server.rs  messages.rs  mod.rs  processor.rs  writer.rs
