[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.11.0", features = ["attributes", "unstable"]}
async-trait = "0.1.53"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
tide = "0.16.0"
xactor = "0.7.11"
yahoo_finance_api = "1.1"
